# stardust

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: actions.yml  ci.yml  main.yml  pre_release.yml  pull_request.yml  release.yml
docs/: architecture.md  development.md  overview.md  testing.md
examples/: app.py  delay.py  json_request.py  multiple_functions.py  no_content_respose.py  plain_text_response.py  query_params.py
examples/example_module/: __init__.py  app.py
src/stardust/: __init__.py  cli.py  stardust.py
stardust/: __init__.py  file_handler.py  responses.py  stardust.py
tests/: test_app_types.py  test_cli.py  test_handle_file.py  test_responses.py  test_simple_app.py
tests/test_file_handler/: __init__.py
