[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stardust"
version = "0.0.6rc1"
description = "Stardust is micro web framework inspired by serverless and lambda deployments."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Luca Simone", email = "info@lucasimone.info"}
]

dependencies = [
    "starlette>=0.41.2,<0.42.0",
    "uvicorn>=0.32.0,<0.33.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
]

[project.urls]
Repository = "https://github.com/lukefx/stardust"

[project.scripts]
stardust = "stardust.cli:main"
