[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stardust"
version = "0.0.8rc1"
description = "Stardust is micro web framework inspired by serverless and lambda deployments."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Luca Simone", email = "info@lucasimone.info"}
]
license = {text = "MIT"}  # or appropriate license
keywords = ["web", "framework", "serverless", "lambda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "starlette>=0.41.2,<0.42.0",
    "uvicorn>=0.32.0,<0.33.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
]

[project.urls]
Repository = "https://github.com/lukefx/stardust"

[project.scripts]
stardust = "stardust.cli:main"
